--- a/04-novembre-2021/widget/style.css
+++ b/04-novembre-2021/widget/style.css
@@ -68,64 +68,75 @@ form label {
 form input,
 form button {
     line-height: 20px;
-    padding: 5px;
-    font-size: 20px;
+    font-size: 12px;
 }
   
 input {
     margin-bottom: 20px;
+    border-radius: 20px;
+    border-style: none;
+    padding: 8px;
+
 }
   
+button {
+  border-radius: 20px;
+  background-color: white;
+  border-style: none;
+  padding: 10px 20px;
+  margin-left: 15px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+ul li {
+  background: url(profilepic.jpg);
+  background-color: rgba(248, 247, 216, 0.7);
+  background-position: center;
+  box-shadow: inset 0 0 0 500px rgba(255, 255, 255, 0.65);
+  /* box-shadow: 0 0 10px rgba(212, 227, 255, 0.425); */
+  /* opacity: 0.5; */
+  border-radius: 30px;
+  padding: 50px;
+  margin: 25px 0;
+}
+
+
+div.form-flex form{ 
+  background-color: rgba(226, 247, 255, 0.514);
+  border-color: 1px solid navy;
+  border-radius: 30px;
+  width: 80%;
+  margin: 50px auto;
+  padding: 50px;
+    display: flex;   
+    flex-direction: column; 
+    align-items: center;
+}
+
+
+footer {
+  background-color: navy;
+  padding: 30px;
+  height: 90px;
+  color: #eee;
+  text-align: center;
+  font-size: 16px;
+}
+
+
+
+
+@media (min-width: 768px) {
   ul {
-    list-style: none;
-    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 50px;
   }
-  
-  ul li {
-    background: url(profilepic.jpg);
-    background-color: rgba(248, 247, 216, 0.7);
-    background-position: center;
-    box-shadow: inset 0 0 0 500px rgba(255, 255, 255, 0.65);
-    /* box-shadow: 0 0 10px rgba(212, 227, 255, 0.425); */
-    /* opacity: 0.5; */
-    border-radius: 30px;
-    padding: 50px;
-    margin: 25px 0;
-  }
-
-
-  div.form-flex form{ 
-    background-color: rgba(226, 247, 255, 0.514);
-    border-color: 1px solid navy;
-    border-radius: 30px;
-    width: 80%;
-    margin: 50px auto;
-    padding: 50px;
-      display: flex;   
-      flex-direction: column; 
-      align-items: center;
-  }
-
-
-  footer {
-    background-color: navy;
-    padding: 30px;
-    height: 90px;
-    color: #eee;
-    text-align: center;
-    font-size: 16px;
-  }
-
-
-
-
-  @media (min-width: 768px) {
-    ul {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      column-gap: 50px;
-    }
-  }
+}
 
 
 
