--- a/04-novembre-2021/widget/style.css
+++ b/04-novembre-2021/widget/style.css
@@ -4,36 +4,46 @@
     box-sizing: border-box;
 }
 
+
+/* BASE STYLE */
+
 body {   
   font-family: Arial;
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background: linear-gradient(-45deg, #23d5cc, #ee9852, #e73c45, #ffe75d );
+  animation: AnimationName 3s ease infinite;
 	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+	animation: gradient 8s ease infinite;
 	height: 100vh; 
   color: navy;
 }
 
 
-/* animation */
+    /* animation */
 
-    @keyframes gradient {
-      0% {
-        background-position: 0% 50%;
-      }
-      50% {
-        background-position: 100% 50%;
-      }
-      100% {
-        background-position: 0% 50%;
-      }
-    }
+        @keyframes gradient {
+          0% {
+            background-position: 0% 50%;
+          }
+          50% {
+            background-position: 100% 50%;
+          }
+          100% {
+            background-position: 0% 50%;
+          }
+        }
 
-/*-------------------------------------*/
+    /*-------------------------------------*/
+
+
+header {
+  background-color: rgba(226, 247, 255, 0.514);
+  margin: 0px auto;
+  padding: 50px 100px;
+}
 
 h1 {
     font-size: 45px;
     font-weight: bold;
-    margin-bottom: 30px;
 }
 
 h3 {
@@ -48,73 +58,11 @@ a{
 }
 
 main {
-    width: 80%;
-    margin: 50px auto 80px;
+    width: 100%;
+    margin: 0px auto;
     font-family: sans-serif;
   }
 
-
-
-form {
-    margin-bottom: 20px;
-}
-
-
-form label {
-    display: block;
-    margin-bottom: 5px;
-}
-
-form input,
-form button {
-    line-height: 20px;
-    font-size: 12px;
-}
-  
-input {
-    margin-bottom: 20px;
-    border-radius: 20px;
-    border-style: none;
-    padding: 8px;
-
-}
-  
-button {
-  border-radius: 20px;
-  background-color: white;
-  border-style: none;
-  padding: 10px 20px;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-ul li {
-  background: url(profilepic.jpg);
-  background-color: rgba(248, 247, 216, 0.7);
-  background-position: center;
-  box-shadow: inset 0 0 0 500px rgba(255, 255, 255, 0.65);
-  /* box-shadow: 0 0 10px rgba(212, 227, 255, 0.425); */
-  /* opacity: 0.5; */
-  border-radius: 30px;
-  padding: 50px;
-  margin: 25px 0;
-}
-
-
-div.form-flex form{ 
-  background-color: rgba(226, 247, 255, 0.514);
-  border-color: 1px solid navy;
-  border-radius: 30px;
-  width: 80%;
-  margin: 50px auto;
-  padding: 50px;
-    display: flex;   
-    flex-direction: column; 
-    align-items: center;
-}
 
 
 footer {
@@ -126,6 +74,108 @@ footer {
   font-size: 16px;
 }
 
+/*-------------END BASE STYLE------------------------*/
+
+
+
+
+
+/* FORMS */
+input {
+  margin-bottom: 20px;
+  border-radius: 20px;
+  border-style: none;
+  padding: 8px;
+
+}
+
+button {
+border-radius: 20px;
+background-color: white;
+border-style: none;
+padding: 8px 10px 5px 10px; 
+}
+
+
+.form1 {
+  margin: 20px 100px;
+}
+
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 12px;
+}
+
+.form1 input,
+.form1 button {
+  line-height: 20px;
+  font-size: 12px;
+  float: left;
+}
+
+
+.form1 input{
+  margin-right: 8px;
+}
+
+input#phone{
+  margin-right: 10px;
+}
+  /* FLEX BOX*/
+  /* main container of both forms */
+.div-flex {
+  display: flex;
+  background-color: rgba(226, 247, 255, 0.514);
+  border-radius: 0px 0px 0px 150px;
+  margin: 0px auto;
+  /* padding: 0px 100px; */
+  align-items: center;
+  }
+
+  /* flex second form */
+.form-flex {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.form-group {
+  margin: 0 8px;
+}
+
+/*-------------END FORMS------------------------*/
+
+
+
+
+
+/* CARDS */
+
+ul {
+  list-style: none;
+  padding: 100px;
+}
+
+ul li {
+  background: url(profilepic.jpg);
+  background-color: rgba(248, 247, 216, 0.7);
+  background-position: center;
+  box-shadow: inset 0 0 0 500px rgba(255, 255, 255, 0.65);
+  /* box-shadow: 0 0 10px rgba(212, 227, 255, 0.425); */
+  /* opacity: 0.5; */
+  border-radius: 30px;
+  padding: 50px;
+  margin: 8px 0;
+}
+
+
+
+
+
+
+
+
 
 
 
@@ -133,7 +183,7 @@ footer {
   ul {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    column-gap: 50px;
+    column-gap: 16px;
   }
 }
 
