--- a/17-novembre-2021-widget-films/style.css
+++ b/17-novembre-2021-widget-films/style.css
@@ -87,13 +87,12 @@ h2.elSchede, .green{
 .lista {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
+    /* flex-direction: row; */
     
-    justify-content: space-between ;
+    justify-content: space-evenly ;
     margin-bottom: 30px;
-    margin-left: 120px;
+    /* margin-left: 120px; */
 }
-
 
 .lista li{
     margin: 8px;
@@ -105,7 +104,7 @@ h2.elSchede, .green{
     box-shadow: inset 0 0 0 500px rgba(9, 0, 20, 0.3);
     /* box-shadow: 0 4px 30px rgba(27, 6, 104, 0.425); */
     
-    background-position: center;
+    background-size: cover;
     background-repeat: no-repeat;
     min-height: 250px;
     min-width: 250px;
